name:          coursework
version:       0.1.0
license:       AllRightsReserved
author:        Niklas Hambüchen <mail@nh2.me>
category:      Graphics
build-type:    Simple
cabal-version: >= 1.10


executable coursework
  main-is:
    Coursework.hs
  build-depends:
      base < 5
    , attoparsec >= 0.10
    , attoparsec-binary >= 0.2
    , bytestring >= 0.9
    , GLUT >= 2.3
    , netpbm >= 0.1
    , OpenGL >= 2.6
    , optparse-applicative >= 0.5.0.0
    , primitive >= 0.5
    , text >= 0.11
    , vector >= 0.10
    , vector-th-unbox >= 0.2.0.1
  hs-source-dirs: .
  default-language: Haskell2010
  ghc-options: -Wall
